--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,4 +9,5 @@ jobs:
       - name: build docker image
         uses: ./.github/actions/default
       - run: composer install
-      - run: XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-text --colors=never
+      - run: XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-clover clover.xml
+      - run: vendor/bin/php-coveralls --coverage_clover=clover.xml -v
