--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^12.3"
+    "phpunit/phpunit": "^12.3",
+    "php-coveralls/php-coveralls": "^2.8"
   }
 }
