add coverage report

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,4 +10,5 @@ jobs:
         uses: ./.github/actions/default
       - run: composer install
       - run: XDEBUG_MODE=coverage vendor/bin/phpunit --coverage-clover clover.xml
-      - run: vendor/bin/php-coveralls --coverage_clover=clover.xml -v
+        env: COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: vendor/bin/php-coveralls -v
